--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,33 @@
-Jinja2~=2.11.2
-werkzeug~=1.0.1
+Jinja2==3.0.3
+werkzeug==2.0.3
 wsproto~=0.15.0
 nonebot[scheduler]==1.8.0
 aiocqhttp~=1.4.0
 aiohttp~=3.8.1
 lxml>=4.9.1
 pytz>=2019.3
-requests>=2.23.0
+requests~=2.27.1
 sogou_tr_free~=0.0.8
 zhconv~=1.4.1
-Pillow~=9.1.0
+Pillow~=9.1.1
 matplotlib~=3.2.1
 numpy~=1.22.3
-beautifulsoup4~=4.9.0
+beautifulsoup4~=4.10.0
 pygtrie~=2.3.3
 tinydb~=4.1.1
 peony-twitter[all]~=2.1.2
 cloudscraper~=1.2.60
+imageio==2.19.2
+opencv_python_headless
+typing_extensions==3.7.4.3
+httpx==0.22.0
+aiofiles==0.8.0
+aiocache==0.11.1
+emoji==1.7.0
+fontTools==4.33.3
+psutil
+distro
+pathos==0.2.8
+prettytable==3.2.0
+GitPython==3.1.27
+fuzzywuzzy==0.18.0
