chore: remove useless dependence

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,38 @@
-Jinja2==3.0.3
-werkzeug==2.0.3
-Quart==0.14.1
-MarkupSafe~=1.0
-wsproto~=0.15.0
-nonebot[scheduler]==1.8.0
-aiocqhttp~=1.4.0
-aiohttp~=3.8.1
-lxml>=4.9.1
-pytz>=2019.3
-requests~=2.27.1
-sogou_tr_free~=0.0.8
-zhconv~=1.4.1
-Pillow~=9.1.1
-matplotlib==3.6.1
-numpy~=1.22.3
-beautifulsoup4~=4.10.0
-pygtrie~=2.3.3
-tinydb~=4.1.1
-peony-twitter[all]~=2.1.2
-cloudscraper~=1.2.60
-imageio==2.19.2
-opencv_python_headless
-typing_extensions==4.1.0
-httpx==0.22.0
-aiofiles==0.8.0
 aiocache==0.11.1
+aiocqhttp==1.4.2
+aiofiles==0.8.0
+aiohttp==3.8.4
+anyio==3.6.1
+bbcode==1.1.0
+beautifulsoup4==4.10.0
+cloudscraper~=1.2.60
+distro==1.8.0
 emoji==1.7.0
 fontTools==4.33.3
-psutil
-distro
-pathos==0.2.8
-prettytable==3.2.0
-GitPython==3.1.27
 fuzzywuzzy==0.18.0
+GitPython==3.1.27
+httpx==0.22.0
+imageio==2.19.2
+Jinja2==3.0.3
+lxml==4.9.3
+MarkupSafe==2.1.3
+matplotlib==3.6.1
+nonebot[scheduler]==1.8.0
+numpy==1.22.4
+opencv_python_headless==4.8.0.74
+pathos==0.2.8
+peony-twitter[all]~=2.1.2
+Pillow==9.1.1
+prettytable==3.2.0
+psutil==5.9.5
 pydantic==1.10.2
-bbcode==1.1.0
-anyio==3.6.1
+pygtrie==2.3.3
+pytz==2023.3
+Quart==0.14.1
+requests==2.27.1
+sogou_tr_free~=0.0.8
+tinydb==4.1.1
+typing_extensions==4.1.0
+werkzeug==2.0.3
+wsproto==0.15.0
+zhconv==1.4.3
