--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,11 @@ GitPython==3.1.27
 httpx==0.24.1
 imageio==2.19.2
 Jinja2==3.0.3
+loguru==0.7.0
 lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.6.1
+msgpack==1.0.5
 nonebot[scheduler]==1.8.0
 numpy==1.22.4
 opencv_python_headless==4.8.0.74
@@ -25,6 +27,7 @@ peony-twitter[all]~=2.1.2
 Pillow==9.1.1
 prettytable==3.2.0
 psutil==5.9.5
+pycryptodome==3.18.0
 pydantic==1.10.2
 pygtrie==2.3.3
 pytz==2023.3
