--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ hoshino/modules/pcrclanbattle/clanbattlev3
 hoshino/modules/pcrclanbattle/clanbattlev4
 hoshino/modules/umamusume
 hoshino/modules/pcrjjc3-tw
+hoshino/modules/priconne/arena/buffer
+hoshino/modules/priconne/arena/dic.npy
 _git/
 
 # log
