--- a/environment_full.yml
+++ b/environment_full.yml
@@ -184,6 +184,7 @@ dependencies:
   - typing-inspection=0.4.0=pyhd8ed1ab_0
   - typing_extensions=4.13.2=pyh29332c3_0
   - tzdata=2025b=h78e105d_0
+  - ujson=5.10.0=py310hb4ad77e_1
   - unicodedata2=16.0.0=py310h078409c_0
   - urllib3=1.26.19=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
